syntax = "proto3";

option go_package = "../../shared/proto/auth-proto";


service AuthService {
    rpc CreateAuth(CreateAuthRequest) returns (CreateAuthResponse);
}

message CreateAuthRequest {
    int32 id = 1;
    string name = 2;
    string email = 3;
    string password = 4;
    string role = 5;
}

message CreateAuthResponse {
    bool success = 1;
    string message = 2;
}
