syntax = "proto3";

option go_package = "../../proto/users-proto";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

service UsersService {
    rpc GetUserById (GetUserByIdRequest) returns (GetUserResponse);
    rpc GetListUser (google.protobuf.Empty) returns (GetUserListResponse);
    rpc UpdateUser (UserRequestData) returns (GetUserResponse);
    rpc DeleteUser (DeleteUserRequest) returns (DeleteResponse);
}

message GetUserByIdRequest {
    int32 id = 1;
}

message DeleteUserRequest {
    int32 id = 1;
}

message UserRequestData {
    int32 id = 1;
    string name = 2;
    string email = 3;
    string password = 4;
    string role = 5;
}

message UserResponseData {
    int32 id = 1;
    string name = 2;
    string email = 3;
    string role = 4;
    google.protobuf.Timestamp created_at = 5;
    google.protobuf.Timestamp updated_at = 6;
}

message GetUserResponse {
    bool success = 1;
    string message = 2;
    UserResponseData data = 3;
}

message GetUserListResponse {
    bool success = 1;
    string message = 2;
    repeated UserResponseData data = 3;
}

message DeleteResponse {
    bool success = 1;
    string message = 2;
}
